# d-lens

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  metrics.py  security.py
app/db/: models.py  repository.py  session.py
app/schemas/: report.py  status.py  trace.py
app/services/: analyzer.py  classifier.py  embeddings.py  rca_generator.py  severity.py  vector_store.py
app/workers/: celery_app.py  tasks.py
docs/: COMMIT_GUIDE.md
sample_payloads/: bad_rag_trace.json
scripts/: smoke_cloudrun.sh
tests/: conftest.py  test_analyze_api.py  test_classifier.py  test_severity.py
